tests/negative/regression/r29.orng
trait A {
    fn x(y: {Int}) -> ()
}

impl A for Int {
    fn x(y: {Int}) -> () {
        _ = y
    }
}

fn main() -> Int {
    4
}